feat:add a backup of the sources of the application closes #19

--- a/CA2.Part1/build.gradle
+++ b/CA2.Part1/build.gradle
@@ -58,3 +58,8 @@ task runClient(type:JavaExec, dependsOn: classes){
 
     args 'localhost', '59001'
 }
+
+task backup(type: Copy) {
+    from 'src'
+    into 'backup'
+}
