feat: add copycopyJarToDist and deleteFilesWebpack tasks close #32, close#33

--- a/CA2.Part2/demo/build.gradle
+++ b/CA2.Part2/demo/build.gradle
@@ -34,3 +34,15 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+task copyJarToDist(type: Copy, dependsOn: build) {
+	from 'build/libs/'
+	into 'dist'
+	include '*.jar'
+}
+
+task deleteFilesWebpack(type: Delete) {
+	delete 'src/resources/main/static/built/*'
+}
+
+clean.dependsOn (deleteFilesWebpack)
