refactor and add : change demo to demoWithGradle, move scripts to package.json close, implement alternative maven build tool close #37, close #36

--- a/CA2.Part2/demoWithGradle/build.gradle
+++ b/CA2.Part2/demoWithGradle/build.gradle
@@ -36,13 +36,15 @@ tasks.named('test') {
 }
 
 task copyJarToDist(type: Copy, dependsOn: build) {
+	group = 'com.example'
 	from 'build/libs/'
 	into 'dist'
 	include '*.jar'
 }
 
 task deleteFilesWebpack(type: Delete) {
+	group = 'com.example'
 	delete 'src/resources/main/static/built/*'
 }
 
-clean.dependsOn (deleteFilesWebpack)
+clean.dependsOn(deleteFilesWebpack)
