--- a/CA3/Part2/Vagrantfile
+++ b/CA3/Part2/Vagrantfile
@@ -1,8 +1,5 @@
 Vagrant.configure("2") do |config|
-   config.vm.box = "ilker/ubuntu2004"
-   config.vm.box_version = "1.0"
-   config.ssh.guest_port =
-
+  config.vm.box = "perk/ubuntu-2204-arm64"
 
   # This provision is common for both VMs
   config.vm.provision "shell", inline: <<-SHELL
@@ -15,28 +12,31 @@ Vagrant.configure("2") do |config|
   #============
   # Configurations specific to the database VM
   config.vm.define "db" do |db|
-    db.vm.box = "ilker/ubuntu2004"
+    db.vm.box = "perk/ubuntu-2204-arm64"
     db.vm.hostname = "db"
 
-    db.vm.provider "parallels" do |prl|
-      prl.memory = 512
-      prl.cpus = 1
-
-
+    db.vm.provider "qemu" do |qe|
+      qe.arch = "aarch64"
+      qe.machine = "virt,accel=hvf,highmem=off"
+      qe.cpu = "cortex-a72"
+      qe.net_device = "virtio-net-pci"
+      qe.memory = "512"
+      qe.ssh_port = 50122
+      qe.extra_qemu_args = %w(-netdev vmnet-host,id=vmnet,start-address=192.168.56.1,end-address=192.168.56.255,subnet-mask=255.255.255.0 -device virtio-net-pci,mac=52:54:00:12:34:50,netdev=vmnet)
     end
 
     # We want to access H2 console from the host using port 8082
-    # We want to connect to the H2 server using port 9092
+    # We want to connet to the H2 server using port 9092
     db.vm.network "forwarded_port", guest: 8082, host: 8082
     db.vm.network "forwarded_port", guest: 9092, host: 9092
 
-    # We need to download H2 and configure host-network
-    db.vm.provision "shell", inline: <<-SHELL
+    # We need to download H2 and configure host-networksudo
+    config.vm.provision "shell", inline: <<-SHELL
       wget https://repo1.maven.org/maven2/com/h2database/h2/1.4.200/h2-1.4.200.jar
     SHELL
 
     # The following provision shell will run ALWAYS so that we can execute the H2 server process
-    # This could be done in a different way, for instance, setting H2 as a service, like in the following link:
+    # This could be done in a different way, for instance, setiing H2 as as service, like in the following link:
     # How to setup java as a service in ubuntu: http://www.jcgonzalez.com/ubuntu-16-java-service-wrapper-example
     #
     # To connect to H2 use: jdbc:h2:tcp://192.168.33.11:9092/./jpadb
@@ -45,7 +45,6 @@ Vagrant.configure("2") do |config|
       sudo mv /home/vagrant/01-netcfg.yaml /etc/netplan
       chmod 600 /etc/netplan/01-netcfg.yaml
       sudo netplan apply
-
       java -cp ./h2*.jar org.h2.tools.Server -web -webAllowOthers -tcp -tcpAllowOthers -ifNotExists > ~/out.txt &
     SHELL
   end
@@ -53,13 +52,17 @@ Vagrant.configure("2") do |config|
   #============
   # Configurations specific to the webserver VM
   config.vm.define "web" do |web|
-    web.vm.box = "ilker/ubuntu2004"
+    web.vm.box = "perk/ubuntu-2204-arm64"
     web.vm.hostname = "web"
 
-    web.vm.provider "parallels" do |prl|
-      prl.memory = 1024
-      prl.cpus = 1
-
+    web.vm.provider "qemu" do |qe|
+      qe.arch = "aarch64"
+      qe.machine = "virt,accel=hvf,highmem=off"
+      qe.cpu = "cortex-a72"
+      qe.net_device = "virtio-net-pci"
+      qe.memory = "1G"
+      qe.ssh_port = 50222
+      qe.extra_qemu_args = %w(-netdev vmnet-host,id=vmnet,start-address=192.168.56.1,end-address=192.168.56.255,subnet-mask=255.255.255.0 -device virtio-net-pci,mac=52:54:00:12:34:51,netdev=vmnet)
     end
 
     # We want to access tomcat from the host using port 8080
@@ -70,7 +73,6 @@ Vagrant.configure("2") do |config|
       sudo mv /home/vagrant/01-netcfg.yaml /etc/netplan
       chmod 600 /etc/netplan/01-netcfg.yaml
       sudo netplan apply
-
       #sudo apt-get install git -y
       #sudo apt-get install nodejs -y
       #sudo apt-get install npm -y
@@ -79,7 +81,6 @@ Vagrant.configure("2") do |config|
       # If you want to access Tomcat admin web page do the following:
       # Edit /etc/tomcat9/tomcat-users.xml
       # uncomment tomcat-users and add manager-gui to tomcat user
-
       # Change the following command to clone your own repository!
       git clone https://github.com/mariaparreira-code/devops-23-24-JPE-1231843.git
       cd devops-23-24-JPE-1231843/CA2.Part2/demoWithGradle/
