--- a/CA4/Part1/DockerfileVersion1
+++ b/CA4/Part1/DockerfileVersion1
@@ -1,4 +1,7 @@
+# Use the base image from OpenJDK
 FROM openjdk:17-jdk-slim
+
+# Author of the Dockerfile
 LABEL author="mariaparreira-code"
 
 # Install Git
@@ -11,7 +14,7 @@ WORKDIR /CA4/Part1
 RUN git clone https://github.com/mariaparreira-code/devops-23-24-JPE-1231843.git
 
 # Set the working directory for the cloned application
-WORKDIR /CA4/Part1/devops-23-24-JPE-1231843/CA2.Part2/demoWithGradle
+WORKDIR /CA4/Part1/devops-23-24-JPE-1231843/CA2.Part1
 
 # Grant execution permission to the Gradle script
 RUN chmod +x gradlew
@@ -19,5 +22,9 @@ RUN chmod +x gradlew
 # Build the application
 RUN ./gradlew build
 
-# Command
-CMD ["./gradlew", "bootRun"]
+# Expose the port that the server will use
+EXPOSE 59001
+
+# Command to start the server
+ENTRYPOINT ["./gradlew", "runServer"]
+
